--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/rcdiscover
-	previous = 
-	base = ad34799
+	previous = ad34799
+	base = 46b3e97
 	trim = 
 	trimbase = 
