--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/rcdiscover
-	previous = 
-	base = cb831da
+	previous = cb831da
+	base = f0d92f0
 	trim = 
 	trimbase = 
