--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/rcdiscover
-	previous = 
-	base = 5244f0e
+	previous = 5244f0e
+	base = 46a619f
 	trim = 
 	trimbase = 
