--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/rcdiscover
-	previous = 
-	base = 4b63f03
+	previous = 4b63f03
+	base = b6e92fb
 	trim = 
 	trimbase = 
